--- a/package.json
+++ b/package.json
@@ -6,21 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "ngrok": "ngrok http 3000"
   },
   "dependencies": {
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/postgres": "^0.4.1",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "grammy": "^1.18.1",
     "microsoft-cognitiveservices-speech-sdk": "^1.32.0",
     "next": "13.4.19",
-    "node-telegram-bot-api": "^0.61.0",
+    "ngrok": "^5.0.0-beta.2",
+    "openai": "^4.4.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socks-proxy-agent": "^8.0.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
