--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "ts-node --project tsconfig.server.json server.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "ngrok": "ngrok http 3000"
   },
   "dependencies": {
+    "@grammyjs/storage-free": "^2.3.2",
     "@grammyjs/storage-psql": "^2.3.2",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
@@ -28,6 +29,7 @@
     "react-dom": "18.2.0",
     "socks-proxy-agent": "^8.0.2",
     "tailwindcss": "3.3.3",
+    "ts-node": "^10.9.1",
     "typescript": "5.2.2"
   }
 }
